@@ -56,19 +56,22 @@ task generateBaselineManifest {
 }
 
 dependencies {
-    compile project(':tools:gradle-plugins:gradle-monorepo-circleci-plugin')
     compile project(':tools:gradle-plugins:java-groovy-compat')
 
     compile 'com.bmuschko:gradle-docker-plugin'
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
     compile 'com.diffplug.spotless:spotless-plugin-gradle'
+    compile 'com.github.ben-manes:gradle-versions-plugin'
     compile 'com.google.cloud:google-cloud-resourcemanager'
     compile 'com.google.cloud:google-cloud-storage'
     compile 'com.google.guava:guava'
     compile 'com.google.protobuf:protobuf-gradle-plugin'
     compile 'com.jfrog.bintray.gradle:gradle-bintray-plugin'
     compile 'com.moowork.gradle:gradle-node-plugin'
+    compile 'com.netflix.nebula:gradle-dependency-lock-plugin'
+    compile 'com.netflix.nebula:gradle-resolution-rules-plugin'
     compile 'com.palantir:gradle-baseline-java'
     compile 'gradle.plugin.com.boxfuse.client:flyway-release'
     compile 'gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties'
@@ -76,9 +79,19 @@ dependencies {
     compile 'io.fabric8:kubernetes-client'
     compile 'io.spring.gradle:dependency-management-plugin'
     compile 'me.champeau.gradle:jmh-gradle-plugin'
+    compile 'net.ltgt.gradle:gradle-apt-plugin'
+    compile 'nu.studer:gradle-jooq-plugin'
     compile 'org.bouncycastle:bcpkix-jdk15on'
 
-    runtime 'mysql:mysql-connector-java'
+    // Flyway plugin uses the gradle classpath, so adding this allows flyway to access cloud sql.
+    runtime 'com.google.cloud.sql:mysql-socket-factory'
+
+    // TODO(choko): Remove after jooq fixes this requirement - https://github.com/jOOQ/jOOQ/issues/6879
+    // It's simpler to add these explicitly rather than requiring Gradle to be run with --add-modules
+    runtime 'javax.activation:activation'
+    runtime 'javax.xml.bind:jaxb-api'
+    runtime 'com.sun.xml.bind:jaxb-core'
+    runtime 'com.sun.xml.bind:jaxb-impl'
 
     apt 'org.immutables:value'
     compileOnly group: 'org.immutables', name: 'value', classifier: 'annotations'
@@ -90,8 +103,15 @@ gradlePlugin {
             id = 'org.curioswitch.gradle-gcloud-build-cache-plugin'
             implementationClass = 'org.curioswitch.gradle.plugins.gcloud.GcloudBuildCachePlugin'
         }
+        ci {
+            id = 'org.curioswitch.gradle-curio-generic-ci-plugin'
+            implementationClass = 'org.curioswitch.gradle.plugins.ci.CurioGenericCiPlugin'
+        }
+        cloudbuildGithub {
+            id = 'org.curioswitch.gradle-curio-cloudbuild-github-plugin'
+            implementationClass = 'org.curioswitch.gradle.plugins.cloudbuild.CloudbuildGithubPlugin'
+        }
         cluster {
-
             id = 'org.curioswitch.gradle-curio-cluster-plugin'
             implementationClass = 'org.curioswitch.gradle.plugins.gcloud.ClusterPlugin'
         }
